[metadata]
name = spigetpy
version = 0.0.1
author = Nevalicjus
author_email = nevalicjus@gmail.com
description = Spiget API Wrapper
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nevalicjus/spigetpy
project_urls =
    Author = https://nevalicj.us
    Bug Tracker = https://github.com/nevalicjus/spigetpy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests

[options.packages.find]
where = src
